[package]
name = "lili"
version = "0.1.0"
authors = ["azusachino <azusachino@duck.com>"]
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/azusachino/lili"

[dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
lazy_static = "1.4"
# num_cpus = "1.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
shellexpand = "3.0"
tokio = { version = "1.26", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"